--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="retry">Retry</string>
     <string name="back">Back</string>
     <string name="result">Result</string>
+    <string name="TutorCourse">Your Courses</string>
+    <string name="finishCourse">Thats All for this Course !</string>
+
 
     <string name="computerScience">
 
